refactor some more parts